--- a/background/background.tex
+++ b/background/background.tex
@@ -1,11 +1,12 @@
-This project covers a number of exciting areas of Computer Science such as Machine Learning and Privacy Engineering. 
+This project covers an exciting area of Computer Science with Machine Learning and Federated Learning.
 I will be covering each in turn and also giving a more detailed analyses where it is deemed relevant to the project.
 This project makes the following assumptions:
 
 \begin{enumerate}
-    \item The attacks that are carried out only involve interfering with the models, their parameters, their data etc. They do not involve network security based attacks or attacks that involve external agents in manners such as a Distributed Denial of Service (DDOS) attack.
+    \item The attacks that are carried out only interfere with the models, their parameters and their data. They do not involve network security based attacks or attacks that involve external agents in manners such as a Distributed Denial of Service (DDOS) attack.
+    This is because these external agents are not unique to Federated Learning and have nothing to do with its process or how it is implemented.
     
-    \item The Machine Learning Models for the specific datasets tested are in their ideal form for the datasets used and do not require further fine tuning for the distributed systems nature of this work. Fine tuning the hyper-parameters of these models specifically is out of the scope for this project.
+    \item The Machine Learning Models' hyperparameters are optimal to the datasets we test on. Further, that we do not require additional fine tuning for it to achieve optimal performance in the context of a distributed system. Fine tuning the hyper-parameters of these models specifically is out of the scope for this project.
 \end{enumerate}
 
 
