--- a/titlepage.tex
+++ b/titlepage.tex
@@ -15,7 +15,8 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE \degreetype}\\[1.5cm] 
+\textsc{\LARGE \degreetype}\\
+\textsc{\LARGE \subdegreetype}\\[1.5cm] 
 \textsc{\Large Department of Computing}\\[0.5cm] 
 \textsc{\large Imperial College of Science, Technology and Medicine}\\[0.5cm] 
 
@@ -58,7 +59,7 @@
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large \today} % Date, change the \today to a set date if you want to be precise
+{\large 14\textsuperscript{th} June 2021} % Date, change the \today to a set date if you want to be precise
 
 
 \vfill % Fill the rest of the page with whitespace
